# minecraft_hold

./: .gitignore  Cargo.toml  README.md  build.cmd  pubspec.yaml
lib/: main.dart  native.dart
minecraft_hold_api/: Cargo.toml
minecraft_hold_api/src/: lib.rs
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
